# cpac

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LEDGER.md  LICENSE  LINKEDIN_BENCHMARK_REPORT.md  OPTIMIZATION_RECOMMENDATIONS.md  PHASE2_COMPLETE.md  README.md  RELEASE.md  SECURITY.md  TODO.md  WARP.md  bench-results-balanced.csv  bench-results-balanced.md  bench-results-full.csv  bench-results-full.md  bench-results-quick.csv  bench-results-quick.md  benchmark-all.ps1  clippy.toml  download-corpus.ps1  env.ps1  env.sh  pedantic_warnings.txt  pgo-build.ps1  pgo-build.sh  requirements.txt  setup.ps1  setup.sh  shell.ps1  shell.sh
.github/: BRANCH_RULESETS.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
bench-corpus/: data.json  example.rs  large-code.rs  large-data.json  large-metrics.csv  metrics.csv  text-repeated.txt
benches/configs/: corpus_calgary.yaml  corpus_canterbury.yaml  corpus_cloud_configs.yaml  corpus_database_dumps.yaml  (+12 more)
crates/cpac-cli/: Cargo.toml
crates/cpac-cli/src/: config.rs  main.rs
crates/cpac-crypto/: Cargo.toml
crates/cpac-crypto/src/: aead.rs  hqc.rs  hybrid.rs  kdf.rs  keys.rs  lib.rs  pqc.rs  sign.rs
crates/cpac-dag/: Cargo.toml
crates/cpac-dag/src/: dag.rs  lib.rs  profile.rs  registry.rs
crates/cpac-dict/: Cargo.toml
crates/cpac-dict/src/: lib.rs
crates/cpac-engine/: Cargo.toml
crates/cpac-engine/benches/: compress.rs  dag.rs  generate_corpus.rs  simd.rs
crates/cpac-engine/benches/configs/: corpus_cloud_configs.yaml  corpus_database_dumps.yaml  corpus_digitalcorpora.yaml  corpus_docker_layers.yaml  corpus_enwik8.yaml  corpus_enwik9.yaml  corpus_github_events_large.yaml  corpus_json_apis.yaml  corpus_kodak.yaml  corpus_librispeech.yaml  corpus_loghub2_2k.yaml  corpus_musan.yaml  corpus_nasa_logs.yaml  corpus_vctk.yaml  settings.yaml
crates/cpac-engine/benches/corpus/: README.md  csv_100k_rows.csv  csv_10k_rows.csv  csv_1k_rows.csv  json_100_objects.json  json_10k_objects.json  json_1k_objects.json  source_100_funcs.rs  source_1k_funcs.rs  text_100kb.txt  text_10kb.txt  text_1mb.txt  xml_500_records.xml  xml_5k_records.xml
crates/cpac-engine/examples/: bench_runner.rs
crates/cpac-engine/src/: accel.rs  analyzer.rs  bandwidth.rs  bench.rs  corpus.rs  dedup.rs  host.rs  lib.rs  parallel.rs  pool.rs  profiler.rs  wal.rs
crates/cpac-engine/tests/: cross_engine.rs  determinism.rs  fuzz_equivalent.rs  generate_golden_vectors.rs  generate_transform_goldens.rs  golden_vectors.rs  integration.rs  msn_corpus.rs  msn_dag.rs  msn_debug.rs  msn_debug_flow.rs  msn_profile.rs  msn_realworld.rs  phase1_bwt_parallel.rs  phase2_msn_dedup.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  regression.rs  roundtrip.rs
crates/cpac-engine/tests/fixtures/: hello.txt  sample.csv
crates/cpac-engine/tests/fixtures/golden/: README.md  backend_brotli.cpac  backend_raw.cpac  backend_zstd.cpac  edge_empty.cpac  edge_large_repetitive.cpac  edge_medium.cpac  edge_single_byte.cpac  edge_small.cpac  pattern_binary_structured.cpac  pattern_csv.cpac  pattern_json.cpac  pattern_random.cpac  pattern_text_repetitive.cpac
crates/cpac-entropy/: Cargo.toml
crates/cpac-entropy/src/: lib.rs
crates/cpac-ffi/: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  cpac-config.cmake.in
crates/cpac-ffi/src/: lib.rs
crates/cpac-lab/: Cargo.toml
crates/cpac-lab/experiments/: 01_serial_transforms.yaml  02_transform_chains.yaml  03_msn_columnar.yaml  04_structured_text.yaml  05_log_study.yaml  06_phase1_4_transforms.yaml  07_binary_focus.yaml  baseline.yaml  log_study.yaml
crates/cpac-lab/src/: auto_analyze.rs  calibrate.rs  collector.rs  experiment.rs  lib.rs  report.rs  runner.rs
crates/cpac-msn/: Cargo.toml
crates/cpac-msn/benches/: domains.rs
crates/cpac-msn/fuzz/: Cargo.toml
crates/cpac-msn/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/cpac-msn/src/: domain.rs  lib.rs  registry.rs
crates/cpac-msn/src/domains/: mod.rs  passthrough.rs
crates/cpac-msn/src/domains/binary/: avro.rs  cbor.rs  mod.rs  msgpack.rs  protobuf.rs
crates/cpac-msn/src/domains/logs/: apache.rs  bgl.rs  healthapp.rs  hpc.rs  http.rs  java.rs  json_log.rs  mod.rs  openstack.rs  proxifier.rs  syslog.rs  w3c.rs
crates/cpac-msn/src/domains/text/: csv.rs  json.rs  mod.rs  xml.rs  yaml.rs
crates/cpac-msn/tests/: csv_line_endings.rs  msgpack_plain_text.rs  xml_roundtrip.rs
crates/cpac-streaming/: Cargo.toml
crates/cpac-streaming/benches/: streaming.rs
crates/cpac-streaming/src/: cloud.rs  cpce.rs  lib.rs  mmap.rs  stream.rs
crates/cpac-streaming/tests/: msn_streaming.rs
crates/cpac-transcode/: Cargo.toml
crates/cpac-transcode/src/: detect.rs  lib.rs
crates/cpac-transforms/: Cargo.toml
crates/cpac-transforms/src/: arith_decomp.rs  bwt.rs  bwt_chain.rs  byte_plane.rs  condition.rs  conditioned_bwt.rs  const_elim.rs  context_split.rs  dedup.rs  delta.rs  field_lz.rs  float_split.rs  float_xor.rs  lib.rs  mtf.rs  normalize.rs  parse_int.rs  predict.rs  prefix.rs  projection.rs  range_pack.rs  rle.rs  rolz.rs  row_sort.rs  simd.rs  stride_elim.rs  tokenize.rs  traits.rs  transpose.rs  vocab.rs  zigzag.rs
crates/cpac-transforms/src/simd/: neon.rs  sve.rs
docs/: ARCHITECTURE.md  BENCHMARKING.md  CONTRIBUTING.md  DEV_PROFILING.md  HARDWARE_ACCEL.md  LICENSE_AUDIT.md  MANUAL.md  MSN_GUIDE.md  MSN_SPEC.md  NEURAL_AI_ROADMAP.md  OPENZL_ANALYSIS.md  PLATFORM_MATRIX.md  RELEASE.md  ROADMAP.md  SESSION_8_REPORT.md  SPEC.md  THESIS.md  TRANSFORMS.md  cpac-overview.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive_decode.rs  fuzz_cas_roundtrip.rs  fuzz_frame_decode.rs  fuzz_roundtrip.rs  fuzz_streaming_decode.rs  fuzz_transform_decode.rs
python/cpac-py/: Cargo.toml  README.md  pyproject.toml
python/cpac-py/src/: lib.rs
scripts/: benchmark-fill-tbds.ps1  cpac.py  download-corpus.ps1  pgo-build.ps1  run-benchmarks.ps1  run-corpus-benchmarks.ps1  test-media-recompression.ps1  update-benchmarking-md.py
(+71 files in other folders)
