[package]
name = "cpac-cli"
description = "CPAC command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cpac"
path = "src/main.rs"

[features]
default = []
hqc = ["cpac-crypto/hqc", "cpac-streaming/hqc"]

[dependencies]
cpac-engine = { workspace = true }
cpac-types = { workspace = true }
cpac-ssr = { workspace = true }
cpac-dag = { workspace = true }
cpac-msn = { workspace = true }
cpac-crypto = { workspace = true, features = ["pqc"] }
cpac-streaming = { workspace = true, features = ["pqc"] }
cpac-cas = { workspace = true }
cpac-archive = { workspace = true }
cpac-lab = { workspace = true }
cpac-dict = { workspace = true }
cpac-transcode = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
