[package]
name = "cpac-crypto"
description = "Cryptographic primitives for CPAC: AEAD, key exchange, signatures, KDF"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pqc = ["dep:ml-kem", "dep:ml-dsa"]  # slh-dsa deferred: signature crate version conflict

[dependencies]
cpac-types = { workspace = true }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
zeroize = { version = "1", features = ["derive"] }
ml-kem = { version = "0.2", optional = true }
ml-dsa = { version = "0.0.4", optional = true }
