[package]
name = "cpac-entropy"
description = "Entropy coding backends for the CPAC engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cpac-types = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true }
