[package]
name = "cpac-entropy"
description = "Entropy coding backends for the CPAC engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cpac-types = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
snap = { workspace = true }
lzzzz = { workspace = true }
cpac-lzham-sys = { workspace = true }
libz-ng-sys = { workspace = true }
cpac-lizard-sys = { workspace = true }

[features]
default = []
