[package]
name = "cpac-msn"
description = "Multi-Scale Normalization (MSN) for CPAC: domain-specific semantic extraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cpac-types = { workspace = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rmp-serde = "1.3"
once_cell = "1.21"
memchr = "2"
zstd = { workspace = true }
clap = { workspace = true }

# Domain-specific parsers (all optional for now)
csv = { version = "1.3", optional = true }
quick-xml = { version = "0.37", optional = true }
ciborium = "0.2"
base64 = "0.22"
prost = { version = "0.13", optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
text-domains = ["csv", "quick-xml"]
binary-domains = ["prost"]
all-domains = ["text-domains", "binary-domains"]

[[bench]]
name = "domains"
harness = false

[[bin]]
name = "msn_study"
path = "src/bin/msn_study.rs"
required-features = []
