[package]
name = "cpac-streaming"
description = "Block-based streaming I/O and parallel compression for CPAC"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pqc = ["cpac-crypto/pqc"]
cloud-s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:tokio"]
cloud-gcs = []
cloud-azure = []
hqc = ["cpac-crypto/hqc"]

[dependencies]
cpac-types = { workspace = true }
cpac-engine = { workspace = true }
cpac-msn = { workspace = true }
cpac-crypto = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rayon = "1"
memmap2 = "0.9"
serde_json = "1"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "streaming"
harness = false
