[package]
name = "cpac-transforms"
description = "Encoding transforms for the CPAC compression DAG"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cpac-types = { workspace = true }
cpac-cas = { workspace = true }
cpac-conditioning = { workspace = true }
cpac-predict = { workspace = true }
