[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cpac"
version = "0.1.0"
description = "CPAC - Constraint-Projected Adaptive Compression for Python"
authors = [{name = "BitConcepts, LLC", email = "info@bitconcepts.tech"}]
license = {text = "LicenseRef-CPSC-Research-Evaluation-1.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
]

[tool.maturin]
module-name = "cpac"
bindings = "pyo3"
